* pheno:   made additions to !freeze (F) and !unfreeze (F) shrubbot commands
* pheno:   removed flamethrower flames from third persons view if player is
           frozen. To remove the flames from players view you need to install
           the etpub client > 20090112.
* pheno:   modified foxX's code to update players ready state during
           intermission
* pheno:   reworked the way how ready state was sent to the client
* pheno:   removed weapon auto switching on enabled panzerwar mode
* pheno:   fixed a bug where the ready icon isn't drawn in warmup after player
           died
* pheno:   made it possible to disable bot greeting
* pheno:   reworked a second time the way how ready state was sent to the
           client. This will fix the broken scoreboard on more than 30 players.
* pheno:   Lua API: added et.G_LoseSkillPoints( ent, skill, points )
           library call
* pheno:   added shoutcaster sclogin, sclogout, shoutcastlogin and
           shoutcastlogout commands (NOTE: shoutcaster status is only available
           with installed etpub client > 20090112)
* pheno:   Lua API: added et.G_ClientSound( clientnum, soundindex )
           library call
* pheno:   fixed [command] element command line length
* pheno:   fixed landmine snapshot callback for shoutcasters in follow mode
* pheno:   added shoutcaster console commands
* pheno:   added [i] shortcut for shrubbot [command] elements only
* pheno:   added shoutcaster referee commands
* pheno:   added cointoss callvote command
* pheno:   added friendly hitsounds for disguised coverts
* pheno:   fixed class change with scoped weapon bug (prevents scoped sten)
* pheno:   added headshot mode (g_headshot [0|1])
* pheno:   added instagib damage (bitflag 2) to headshot mode. g_headshot is
           now a bitmask cvar.
* pheno:   added goomba flag 32 - falling corpses won't cause damage
* pheno:   added g_shrubbotOptions bitflag cvar (see docs)